--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "Pakt",
+  "name": "Counter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "react-native start",
+    "setup_project": "npm run step1; npm run step2",
+    "step1": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs",
+    "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "react-native": "^0.21.0"
+    "react-native": "0.21.0",
+    "react-redux": "4.4.0",
+    "redux": "3.3.1",
+    "redux-thunk": "1.0.3"
   }
 }
