--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "lint": "eslint .",
     "setup_project": "npm run step1; npm run step2",
     "step1": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs",
     "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
@@ -13,5 +14,15 @@
     "react-redux": "4.4.0",
     "redux": "3.3.1",
     "redux-thunk": "1.0.3"
-  }
+  },
+  "devDependencies": {
+    "babel-eslint": "^5.0.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.2",
+    "pre-commit": "^1.1.2"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
