--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "react-native": "0.21.0",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-redux": "4.4.0",
     "redux": "3.3.1",
-    "redux-thunk": "1.0.3"
+    "redux-thunk": "1.0.3",
+    "rnpm": "^1.5.2"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0",
