--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react-native": "0.21.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-redux-router": "^1.0.6",
     "react-redux": "4.4.0",
     "redux": "3.3.1",
     "redux-thunk": "1.0.3",
