--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -10,9 +10,10 @@
     "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "react-native": "0.21.0",
+    "react": "0.14.7",
+    "react-native": "0.22.0-rc", 
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-native-redux-router": "^1.0.6",
+    "react-native-router-flux": "^3.0.9",
     "react-redux": "4.4.0",
     "redux": "3.3.1",
     "redux-thunk": "1.0.3",
