--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.6.1",
     "react": "0.14.7",
     "react-native": "0.22.0-rc",
+    "react-native-button": "^1.4.2",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-cli": "^0.1.10",
     "react-native-facebook-login": "^1.0.3",
