--- a/Pakt/package.json
+++ b/Pakt/package.json
@@ -23,6 +23,7 @@
     "react-native-cli": "^0.1.10",
     "react-native-dropdown": "0.0.6",
     "react-native-facebook-login": "^1.0.3",
+    "react-native-material-kit": "^0.3.0",
     "react-native-router-flux": "^3.0.9",
     "react-native-uploader": "0.0.9",
     "react-redux": "4.4.0",
